# pkg/api/permission/edit.go
@@ -1,7 +1,7 @@
 /*
  * @Author: changge <changge1519@gmail.com>
  * @Date: 2022-10-31 09:45:52
- * @LastEditTime: 2022-11-01 17:08:33
+ * @LastEditTime: 2022-11-03 16:22:52
  * @Description: Do not edit
  */
 package permission
@@ -11,7 +11,9 @@ import (
 	"strconv"
 
 	"github.com/chenke1115/hertz-permission/internal/constant/status"
+	"github.com/chenke1115/hertz-permission/internal/pkg/date"
 	"github.com/chenke1115/hertz-permission/internal/pkg/errors"
+	_ "github.com/chenke1115/hertz-permission/internal/pkg/errors/validate"
 	"github.com/chenke1115/hertz-permission/internal/pkg/response"
 	"github.com/chenke1115/hertz-permission/pkg/model"
 
@@ -19,17 +21,17 @@ import (
 )
 
 type ReqEditData struct {
-	PID        int    `json:"pid,required" form:"pid,required"`     //lint:ignore SA5008 ignoreCheck
-	Name       string `json:"name,required" form:"name,required"`   //lint:ignore SA5008 ignoreCheck
-	Alias      string `json:"alias,required" form:"alias,required"` //lint:ignore SA5008 ignoreCheck
-	Type       string `json:"type,required" form:"type,required"`   //lint:ignore SA5008 ignoreCheck
-	Key        string `json:"key" form:"key"`
-	Components string `json:"components" form:"components"`
-	Sort       int    `json:"sort" form:"sort"`
+	Name       string `json:"name,required" form:"name,required" vd:"len($)<64"`             //lint:ignore SA5008 ignoreCheck
+	Alias      string `json:"alias,required" form:"alias,required" vd:"len($)<64"`           //lint:ignore SA5008 ignoreCheck
+	Type       string `json:"type,required" form:"type,required"`                            //lint:ignore SA5008 ignoreCheck
+	Key        string `json:"key,required" form:"key,required"`                              //lint:ignore SA5008 ignoreCheck
+	Components string `json:"components,required" form:"components,required" vd:"len($)<64"` //lint:ignore SA5008 ignoreCheck
+	PID        int    `json:"pid" form:"pid" default:"0"`
+	Sort       int    `json:"sort" form:"sort" default:"0"`
 	Icon       string `json:"icon" form:"icon"`
-	Visible    int    `json:"visible" form:"visible"`
-	Status     int    `json:"status" form:"status"`
-	Remark     string `json:"remark" form:"remark"`
+	Visible    int    `json:"visible" form:"visible" default:"1"`
+	Status     int    `json:"status" form:"status" default:"1"`
+	Remark     string `json:"remark" form:"remark" vd:"len($)<256"`
 }
 
 // EditHandler goDoc
@@ -78,12 +80,6 @@ func EditHandler(ctx context.Context, c *app.RequestContext) {
 		return
 	}
 
-	// Check route
-	if !model.IsValidRoute(req.Key) {
-		err = errors.New(status.PermissionKeyErrorCode)
-		return
-	}
-
 	// Find
 	if permission, err = model.GetPermissionByID(ID); err != nil {
 		return
@@ -95,6 +91,10 @@ func EditHandler(ctx context.Context, c *app.RequestContext) {
 		err = errors.Wrap(err, status.PermissionParamBindingErrorCode)
 		return
 	}
+
+	// set UpdateBy and UpdateTime
+	permission.UpdateBy = "admin" // TODO
+	permission.UpdateTime = date.DateUnix()
 
 	// Do edit
 	err = permission.Edit(model.GetDB())
