# pkg/api/role/option.go
@@ -1,7 +1,7 @@
 /*
  * @Author: changge <changge1519@gmail.com>
  * @Date: 2022-11-01 17:29:31
- * @LastEditTime: 2022-11-01 17:53:18
+ * @LastEditTime: 2022-11-03 16:36:25
  * @Description: Do not edit
  */
 package role
@@ -18,7 +18,7 @@ import (
 // @Tags        RoleOption
 // @Accept      json
 // @Produce     json
-// @Success     200 {object} response.BaseResponse{data=[int]string{}}
+// @Success     200 {object} response.BaseResponse{data=[]string{}}
 // @Failure     400 {object} response.BaseResponse{data=interface{}}
 // @Router      /api/role/option [get]
 func OptionHandler(ctx context.Context, c *app.RequestContext) {
