# pkg/model/permission.go
@@ -1,21 +1,27 @@
 /*
  * @Author: changge <changge1519@gmail.com>
  * @Date: 2022-10-28 11:47:56
- * @LastEditTime: 2022-11-02 14:31:49
+ * @LastEditTime: 2022-11-04 18:15:20
  * @Description: Do not edit
  */
 package model
 
 import (
 	"errors"
+	"fmt"
 	"strings"
 	"time"
 
-	iErrors "github.com/chenke1115/hertz-permission/internal/pkg/errors"
-	gErrors "github.com/chenke1115/hertz-permission/internal/pkg/errors/gorm"
-
 	"github.com/chenke1115/hertz-permission/internal/constant/global"
 	"github.com/chenke1115/hertz-permission/internal/constant/status"
+	"github.com/chenke1115/hertz-permission/internal/constant/types"
+	"github.com/chenke1115/hertz-permission/internal/pkg/array"
+	"github.com/chenke1115/hertz-permission/internal/pkg/date"
+	iErrors "github.com/chenke1115/hertz-permission/internal/pkg/errors"
+	gErrors "github.com/chenke1115/hertz-permission/internal/pkg/errors/gorm"
+	"github.com/chenke1115/hertz-permission/internal/pkg/match"
+	"github.com/chenke1115/hertz-permission/internal/pkg/query"
+
 	"gorm.io/gorm"
 )
 
@@ -24,7 +30,7 @@ type Permission struct {
 	PID        int       `json:"pid" gorm:"column:pid; type:int(11); index; comment:父级ID"`
 	Name       string    `json:"name" gorm:"type:varchar(64); not null; unique; comment:权限名称"`
 	Alias      string    `json:"alias" gorm:"type:varchar(64); not null; unique; comment:别名"`
-	Key        string    `json:"key" gorm:"type:varchar(64); unique; comment:权限全局标识[即路由, 类型为目录可空]"`
+	Key        string    `json:"key" gorm:"type:varchar(64); comment:权限全局标识[即路由, 类型为目录可空]"`
 	Components string    `json:"components" gorm:"type:varchar(64); comment:前端页面路径[类型为按钮可空]"`
 	Sort       int       `json:"sort" gorm:"type:int(4); default:0; comment:排序[从小到大]"`
 	Type       string    `json:"type" gorm:"type:char(1); comment:权限类型[D:目录 M:菜单 B:按钮]"`
@@ -36,9 +42,24 @@ type Permission struct {
 	Remark     string    `json:"remark" gorm:"type:varchar(64); comment:备注"`
 	CreatedAt  time.Time `json:"create_at" gorm:"type:timestamp; default:CURRENT_TIMESTAMP"`
 	UpdatedAt  time.Time `json:"update_at" gorm:"type:timestamp; default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP"`
+}
 
-	// ignore
-	Child []Permission `json:"child" gorm:"-"`
+type PermissionShow struct {
+	Permission
+	UpdateTime string `json:"update_time"`
+}
+
+type PermissionOption struct {
+	ID    int                `json:"id"`
+	Name  string             `json:"name"`
+	Alias string             `json:"alias"`
+	Show  string             `json:"show"`
+	Child []PermissionOption `json:"child" gorm:"-"`
+}
+
+type PermissionQuery struct {
+	PermissionShow
+	query.PaginationQuery
 }
 
 /**
@@ -54,12 +75,82 @@ func (model Permission) TableName() string {
  * @return {*}
  */
 func (model Permission) Before() error {
-	// Check key
-	if !IsValidRoute(model.Key) {
+	// Type
+	if model.Type != "" && !array.In(model.Type, array.StructToArray(types.PermissionTypeArr)) {
+		return iErrors.New(status.PermissionTypeErrorCode)
+	}
+
+	// Name
+	if model.Name != "" && !match.IsKeyString(model.Name) {
+		return iErrors.New(status.PermissionNameErrorCode)
+	}
+
+	// Alias
+	if model.Alias != "" && !match.IsNicknameString(model.Alias) {
+		return iErrors.New(status.PermissionAliasErrorCode)
+	}
+
+	// Key
+	if (model.Type != types.PermissionTypeArr.Dir && model.Key == "") ||
+		(model.Key != "" && !IsValidRoute(model.Key)) {
 		return iErrors.New(status.PermissionKeyErrorCode)
 	}
 
+	// Components
+	if model.Type != types.PermissionTypeArr.Button && model.Components == "" {
+		return iErrors.Newf(status.PermissionParamErrorCode, "该类型下，前端路径不能为空")
+	}
+
+	// Visible and Status
+	if !array.In(model.Visible, []int{status.StateEnabled, status.StateInit}) ||
+		!array.In(model.Status, []int{status.StateEnabled, status.StateInit}) {
+		return iErrors.New(status.PermissionStatusErrorCode)
+	}
+
 	return nil
+}
+
+/**
+ * @description: Do Search
+ * @return {*}
+ */
+func (query PermissionQuery) Search() (list *[]PermissionShow, total int64, err error) {
+	// Init
+	list = &[]PermissionShow{}
+	permissions := &[]Permission{}
+
+	// Init db-query
+	tx := GetDB().Model(&Permission{})
+
+	// Set search conditions
+	if query.Stime != "" {
+		tx = tx.Where("`created_at` >= ?", query.Stime)
+	}
+
+	if query.Etime != "" {
+		tx = tx.Where("`created_at` < ?", query.Etime)
+	}
+
+	// Get data
+	total, err = crudAll(&query.PaginationQuery, tx, permissions)
+	for _, permission := range *permissions {
+		perShow := PermissionShow{}
+		perShow.Permission = permission
+		perShow.UpdateTime = date.DateFormat(permission.UpdateTime)
+		*list = append(*list, perShow)
+	}
+
+	return
+}
+
+/**
+ * @description: Get for permission option
+ * @param {[]Permission} list
+ * @param {error} err
+ * @return {*}
+ */
+func (model Permission) Option() (list []PermissionOption, err error) {
+	return model.GetOption(0)
 }
 
 /**
@@ -89,6 +180,10 @@ func (model Permission) Create(tx *gorm.DB) (err error) {
  * @return {*}
  */
 func (model Permission) Edit(tx *gorm.DB) (err error) {
+	if err = model.Before(); err != nil {
+		return
+	}
+
 	err = tx.Updates(&model).Error
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
@@ -109,11 +204,46 @@ func (model Permission) Edit(tx *gorm.DB) (err error) {
  */
 func (model Permission) Del(tx *gorm.DB) (err error) {
 	// Is in use
-	// TODO
+	if IsExistPermissionID(model.ID) {
+		err = iErrors.New(status.PermissionIsUseErrorCode)
+		return
+	}
 
 	// Do del
 	if err = tx.Unscoped().Delete(model).Error; err != nil {
 		err = iErrors.WrapCode(err, iErrors.BadRequest)
+	}
+
+	return
+}
+
+/**
+ * @description: Get for permission option
+ * @param {[]Permission} list
+ * @param {error} err
+ * @return {*}
+ */
+func (model Permission) GetOption(pid int) (list []PermissionOption, err error) {
+	err = GetDB().Model(&Permission{}).Select("id, pid, name, alias").Where("pid = ?", pid).Scan(&list).Error
+	if err != nil {
+		err = iErrors.WrapCode(err, iErrors.BadRequest)
+		return
+	}
+
+	for k1, v1 := range list {
+		var c1 []PermissionOption
+		c1, err = model.GetOption(v1.ID)
+		if err != nil {
+			err = iErrors.WrapCode(err, iErrors.BadRequest)
+			return
+		}
+
+		list[k1].Show = fmt.Sprintf("%s[%s]", v1.Alias, v1.Name)
+		if len(c1) > 0 {
+			list[k1].Child = c1
+		} else {
+			list[k1].Child = []PermissionOption{}
+		}
 	}
 
 	return
@@ -133,6 +263,7 @@ func GetPermissionByID(id int) (permission Permission, err error) {
 			err = iErrors.WrapCode(err, iErrors.BadRequest)
 		}
 	}
+
 	return
 }
 
